Fix layout issue in firefox with legend.

--- a/app/assets/stylesheets/tree_view.css.scss
+++ b/app/assets/stylesheets/tree_view.css.scss
@@ -177,14 +177,15 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 			list-style: none;
-			font-size: 18px;
+			line-height: 34px;
+			height: 28px;
 		}
 
 		li:before {
 			content: "•";
-			font-size: 90px;
+			font-size: 80px;
 			vertical-align: middle;
-			line-height: 18px;
+			line-height: 28px;
 			margin-right: 5px;
 		}
 
